--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -509,7 +509,7 @@ user.create.password                         = password
 user.create.roles                            = Role
 user.create.title                            = Create user
 user.create.username                         = username
-user.created                                 = The user {0} has been deleted!
+user.created                                 = The user {0} has been created!
 user.deleted                                 = The user {0} has been deleted!
 user.deleted.couldNotDeleteOwnUser           = The own user could not be deleted!
 user.edit.title                              = edit user
